--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -126,6 +126,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Hausautomation_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
