--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -131,34 +131,19 @@
     <None Include="Hausautomation_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\112_hmip-wrc2_thumb.png" />
-    <Content Include="Assets\113_hmip-psm_thumb.png" />
-    <Content Include="Assets\124_hm-sec-mdir_thumb.png" />
-    <Content Include="Assets\4_hm-lc-sw1-fm_thumb.png" />
-    <Content Include="Assets\5_hm-lc-sw2-fm_thumb.png" />
-    <Content Include="Assets\70_hm-pb-4dis-wm_thumb.png" />
-    <Content Include="Assets\75_hm-pb-2-wm55_thumb.png" />
-    <Content Include="Assets\93_hm-es-pmsw1-pl_thumb.png" />
-    <Content Include="Assets\98_hm-sec-sco_thumb.png" />
-    <Content Include="Assets\CCU2_thumb.png" />
     <Content Include="Assets\Hausautomation.jpg" />
-    <Content Include="Assets\HM-Funk-Bewegungsmelder-innen-V-oS.jpg" />
-    <Content Include="Assets\HM-Funk-Display-Wandtaster-V.jpg" />
-    <Content Include="Assets\HM-Funk-Fensterkontakt-optisch-schraeg-oS.jpg" />
-    <Content Include="Assets\HM-Funk-LAN-Gateway-V.jpg" />
-    <Content Include="Assets\HM-Funk-Schaltaktor-1-fach-fuer-MS-V-oS.jpg" />
-    <Content Include="Assets\HM-Funk-Schaltaktor-1-fach-UP-V-oS.jpg" />
-    <Content Include="Assets\HM-Funk-Schaltaktor-1-fach-Zwischenstecker-V-oS.jpg" />
-    <Content Include="Assets\HM-Funk-Schaltaktor-2-fach-UP-V-oS.jpg" />
-    <Content Include="Assets\HM-Funk-Wandtaster-2-fach-Aufputz-V.jpg" />
-    <Content Include="Assets\HM-Zentrale-CCU2-V.jpg" />
-    <Content Include="Assets\HmIP-Rollladenaktor-fuer-MS-V.jpg" />
-    <Content Include="Assets\HmIP-Schalt-Mess-Aktor-fuer-Markenschalter_V.jpg" />
-    <Content Include="Assets\HmIP-Schaltsteckdose-V-oS.jpg" />
-    <Content Include="Assets\HmIP-Wandtaster-V.jpg" />
-    <Content Include="Assets\PushButton-2ch-wm_thumb.png" />
-    <Content Include="Assets\Rolladen.jpg" />
-    <Content Include="Assets\Speedy.jpg" />
+    <Content Include="Assets\HM-Sec-MDIR-3.png" />
+    <Content Include="Assets\HM-PB-4Dis-WM.jpg" />
+    <Content Include="Assets\HM-Sec-SCo.png" />
+    <Content Include="Assets\HM-LC-Sw1-FM.png" />
+    <Content Include="Assets\HM-ES-PMSw1-Pl-DN-R1.png" />
+    <Content Include="Assets\HM-PB-2-WM55-2.jpg" />
+    <Content Include="Assets\HMIP-PSM.png" />
+    <Content Include="Assets\HMIP-WRC2.jpg" />
+    <Content Include="Assets\HM-LC-Sw1PBU-FM.jpg" />
+    <Content Include="Assets\HmIP-BROLL.jpg" />
+    <Content Include="Assets\HM-LC-Sw2-FM.png" />
+    <Content Include="Assets\HM-Cen-O-TW-x-x-2.png" />
     <Content Include="z_functionlist.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
