--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\Channel.cs" />
     <Compile Include="Model\Datapoint.cs" />
     <Compile Include="Model\Device.cs" />
+    <Compile Include="Model\Favoriten.cs" />
     <Compile Include="Model\Function.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
