--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -104,6 +104,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Programs.cs" />
     <Compile Include="Pages\PageLoad.xaml.cs">
       <DependentUpon>PageLoad.xaml</DependentUpon>
     </Compile>
@@ -121,6 +122,9 @@
     </Compile>
     <Compile Include="Pages\PageHelp.xaml.cs">
       <DependentUpon>PageHelp.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\PageProg.xaml.cs">
+      <DependentUpon>PageProg.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\PageRoom.xaml.cs">
       <DependentUpon>PageRoom.xaml</DependentUpon>
@@ -198,6 +202,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\PageHelp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\PageProg.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
