--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -158,7 +158,7 @@
     <Content Include="Assets\Hausautomation.jpg" />
     <Content Include="Assets\HM-OU-LED16.png" />
     <Content Include="Assets\HM-RC-Key4-2.jpg" />
-    <Content Include="z_functionlist.xml" />
+    <Content Include="XML\functionlist.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -167,14 +167,14 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Content Include="z_roomlist.xml" />
-    <Content Include="z_devicelist.xml">
+    <Content Include="XML\roomlist.xml" />
+    <Content Include="XML\devicelist.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="z_statelist.xml">
+    <Content Include="XML\statelist.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="z_XML-API.txt" />
+    <Content Include="XML\XML-API.txt" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
