HmIP-FSM Update, PRESS_LONG, PRESS_SHORT für HM-PB-2-WM55-2

--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -150,6 +150,7 @@
     <Content Include="Assets\HM-LC-Sw1-FM.png" />
     <Content Include="Assets\HM-ES-PMSw1-Pl-DN-R1.png" />
     <Content Include="Assets\HM-PB-2-WM55-2.jpg" />
+    <Content Include="Assets\HmIP-FSM.png" />
     <Content Include="Assets\HMIP-PSM.png" />
     <Content Include="Assets\HMIP-WRC2.jpg" />
     <Content Include="Assets\HM-LC-Sw1PBU-FM.jpg" />
