HMPB4DisWM, HMIPWRC2, RSSI implementiert

--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Programs.cs" />
+    <Compile Include="Model\Rssi.cs" />
     <Compile Include="Pages\PageLoad.xaml.cs">
       <DependentUpon>PageLoad.xaml</DependentUpon>
     </Compile>
