--- a/Hausautomation/Hausautomation.csproj
+++ b/Hausautomation/Hausautomation.csproj
@@ -174,6 +174,7 @@
     <Content Include="XML\devicelist.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="XML\rssilist.xml" />
     <Content Include="XML\statelist.xml">
       <SubType>Designer</SubType>
     </Content>
